Worked on table checks